; ModuleID = '/home/carl/AnghaBench/gb-studio/appData/src/gb/src/extr_ScriptRunner_b.c_Script_MathSubVal_b.c'
source_filename = "/home/carl/AnghaBench/gb-studio/appData/src/gb/src/extr_ScriptRunner_b.c_Script_MathSubVal_b.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@script_variables = common dso_local global i64* null, align 8
@script_ptr_x = common dso_local global i64 0, align 8
@script_ptr_y = common dso_local global i64 0, align 8
@script_cmd_args_len = common dso_local global i64 0, align 8
@script_ptr = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@script_continue = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Script_MathSubVal_b() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = load i64*, i64** @script_variables, align 8
  %4 = load i64, i64* @script_ptr_x, align 8
  %5 = getelementptr inbounds i64, i64* %3, i64 %4
  %6 = load i64, i64* %5, align 8
  store i64 %6, i64* %1, align 8
  %7 = load i64*, i64** @script_variables, align 8
  %8 = load i64, i64* @script_ptr_y, align 8
  %9 = getelementptr inbounds i64, i64* %7, i64 %8
  %10 = load i64, i64* %9, align 8
  store i64 %10, i64* %2, align 8
  %11 = load i64, i64* %1, align 8
  %12 = load i64, i64* %2, align 8
  %13 = sub nsw i64 %11, %12
  %14 = load i64*, i64** @script_variables, align 8
  %15 = load i64, i64* @script_ptr_x, align 8
  %16 = getelementptr inbounds i64, i64* %14, i64 %15
  store i64 %13, i64* %16, align 8
  %17 = load i64, i64* @script_cmd_args_len, align 8
  %18 = add nsw i64 1, %17
  %19 = load i32, i32* @script_ptr, align 4
  %20 = sext i32 %19 to i64
  %21 = add nsw i64 %20, %18
  %22 = trunc i64 %21 to i32
  store i32 %22, i32* @script_ptr, align 4
  %23 = load i32, i32* @TRUE, align 4
  store i32 %23, i32* @script_continue, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
